# Diamane

./: .gitignore  CMakeLists.txt
DiamaneTestApp/: main.cpp
libDiamane/graphics/: bezierpath.cpp  bezierpath.hpp  color.hpp  graphics.cpp  graphics.hpp  texture.cpp  texture.hpp
libDiamane/platform/: application.cpp  application.hpp  filesystem.cpp  filesystem.hpp  keyset.hpp
libDiamane/platform/linux/: linux_application.cpp  menubar.cpp  texture.cpp  window.cpp
libDiamane/platform/macos/: application.mm  filesystem.mm  graphicsview.h  graphicsview.mm  keyset.mm  menubar.mm  window.mm
libDiamane/platform/macos/metal/: metalgraphics.h  metalgraphics.mm  metalgraphicsview.h  metalgraphicsview.mm  shaders.h  shaders.metal
libDiamane/ui/: button.cpp  button.hpp  menubar.cpp  menubar.hpp  window.cpp  window.hpp
libDiamane/util/: geometry.cpp  geometry.hpp  handle.hpp  hints.hpp
